# auto-batching-proxy

./: .gitignore  Cargo.toml  README.md
scripts/: direct_simple.sh  proxy_concurrent_calls.sh  proxy_sequential_calls.sh  proxy_simple.sh
src/: batch_processor.rs  config.rs  inference_client.rs  lib.rs  main.rs  request_handler.rs  routes.rs  types.rs
tests/: embed_functionality.rs  embed_validation.rs  health.rs  test_utils.rs
